# Probation

./: .gitignore  CMakeLists.txt  main.c  main.cpp
Practice git/: Readme
gstream/: CMakeLists.txt  main.c
protocol/: CMakeLists.txt  main.c
rtp_camera_sony/: rtp_receive.c  rtp_send.c
sony_sdk/: README.md
sony_sdk/app/: CameraDevice.cpp  CameraDevice.h  PropertyValueTable.cpp  PropertyValueTable.h  RemoteCli.cpp
sony_sdk/app/CRSDK/: CameraRemote_SDK.h  CrDeviceProperty.h
